--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@preact/signals-react": "^1.3.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "dark-mode-toggle": "^0.14.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-scroll": "^1.9.0",
+    "sonner": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
